language/move-lang/tests/move_check/naming/unresolved_type_with_args.move
module M {
    struct Mine<T, U> { f: A<T, U>, g: X<U> }
    foo<T, U>(x: S<T>): G<T, U> {
        let _: B<U> = (0: P<U, T>);
    }
}
